# AI-Agent-for-Educator

./: LICENSE  README.md  main.py  pyproject.toml  user_inputs.json
Research/: test.ipynb
src/education_ai_system/: crew.py  main.py
src/education_ai_system/api/: crew_routes.py  docx_conversion_routes.py  embeddings_routes.py
src/education_ai_system/config/: agents.yaml  tasks.yaml
src/education_ai_system/data_processing/: metadata_extractor.py  pdf_extractor.py  text_chunker.py
src/education_ai_system/embeddings/: pinecone_manager.py
src/education_ai_system/tools/: pinecone_exa_tools.py
src/education_ai_system/utils/: file_operations.py
tests/: test_integration.py  test_pdf_extractor.py
